--- a/common/package.json
+++ b/common/package.json
@@ -27,7 +27,8 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "dotenv-flow": "^3.2.0",
-    "log4js": "^6.4.4"
+    "log4js": "^6.4.4",
+    "merkletreejs": "^0.2.31"
   },
   "scripts": {
     "check": "yarn hardhat check",
