--- a/common/package.json
+++ b/common/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -12,14 +13,17 @@
     "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
+    "ethers": "^5.6.8",
     "hardhat": "^2.9.3",
     "hardhat-abi-exporter": "^2.8.0",
+    "hardhat-deploy": "^0.11.10",
     "sol-merger": "^4.1.1",
     "solidity-coverage": "^0.7.20",
     "web3": "^1.7.1"
   },
   "dependencies": {
+    "@opengsn/contracts": "^2.2.6",
+    "@opengsn/provider": "^2.2.6",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
