--- a/start-my-contracts/package.json
+++ b/start-my-contracts/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "demo",
+  "name": "swap-mining",
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -12,14 +13,19 @@
     "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
-    "hardhat": "^2.9.3",
+    "ethers": "^5.6.8",
+    "hardhat": "^2.9.7",
     "hardhat-abi-exporter": "^2.8.0",
+    "hardhat-deploy": "^0.11.10",
+    "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-gas-trackooor": "^1.0.2",
     "sol-merger": "^4.1.1",
     "solidity-coverage": "^0.7.20",
     "web3": "^1.7.1"
   },
   "dependencies": {
+    "@opengsn/contracts": "^2.2.6",
+    "@opengsn/provider": "^2.2.6",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
@@ -27,16 +33,21 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "dotenv-flow": "^3.2.0",
-    "log4js": "^6.4.4"
+    "log4js": "^6.4.4",
+    "merkletreejs": "^0.2.31"
   },
   "scripts": {
     "check": "yarn hardhat check",
     "precompile": "yarn hardhat clean",
     "compile": "yarn hardhat compile",
+    "deploy": "yarn hardhat run scripts/deploy.js --network localhost",
     "deploy:bsctest": "yarn hardhat run scripts/deploy.js --network bsctest",
     "deploy:rinkeby": "yarn hardhat run scripts/deploy.js --network rinkeby",
+    "deploy:goerli": "yarn hardhat run scripts/deploy.js --network goerli",
+    "test": "yarn hardhat --network localhost test",
     "test:bsctest": "yarn hardhat --network bsctest test",
-    "test:rinkeby":"yarn hardhat --network rinkeby test",
+    "test:rinkeby": "yarn hardhat --network rinkeby test",
+    "test:goerli": "yarn hardhat --network goerli test",
     "coverage": "yarn hardhat coverage",
     "abi": "yarn hardhat export-abi --no-compile",
     "docs": "yarn hardhat dodoc",
